Activity: @mentions RTL fixes
The suggestions window was being stretched full width, due to the mentions.js only setting .left (after left had been set in the CSS), but in RTL, right had been set, causing a full-width window.

See #3278, #5855

git-svn-id: https://buddypress.svn.wordpress.org/trunk@9008 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-activity/css/mentions.css
+++ b/src/bp-activity/css/mentions.css
@@ -6,11 +6,14 @@
 	color: #D84800;
 	display: none;
 	font-family: sans-serif;
-	left: 0;
 	margin-top: 18px;
 	position: absolute;
 	top: 0;
 	z-index: 1000; /* >999 for wp-admin */
+}
+/* @noflip */
+.atwho-view {
+	left: 0; 
 }
 .atwho-view ul {
 	list-style: none;
